testbed/test/cruise/compiler/expected/Before_After_Custom.txt
Before_After_Custom.ump:17: error: incompatible types: int cannot be converted to String
            return a;
                   ^
1 error